--- a/project/static/css/styles.css
+++ b/project/static/css/styles.css
@@ -333,3 +333,10 @@ footer {
   color: #f9f9f9;
   font-weight: bold;
 }
+.centered {
+  position: fixed; /* or absolute */
+  top: 50%;
+  left: 50%;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
+}
