--- a/project/templates/search.html
+++ b/project/templates/search.html
@@ -3,14 +3,25 @@
 {% block title %}Search{% endblock %}
 
 {% block content %}
-
+  <section id="categories">
+    <div class="container">
+      <form action="{{ url_for('search.srch_handle') }}" method="POST">
+        <div class="input-group rounded">
+          <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
+            aria-describedby="search-addon" id="search" name="search"/>
+          <span class="input-group-text border-0" id="search-addon">
+            <button type="submit" class="btn btn-outline-dark"><i class="fa fa-search"></i></button>
+          </span>
+        </div>
+      </form>
+  </section>
   <!-- Recipes Items
   ================== -->
   <section id="items">
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h2>Recipes</h2>
+          <h2>Recipes searched</h2>
         </div>
       </div>
       
@@ -32,24 +43,31 @@
             </div>
           {% endfor %}
 
-          <nav aria-label="Page navigation">
-            <ul class="pagination">
-              {% if recipes_srchd.has_prev %}
-                <li class="page-item"><a class="page-link" href="{{ url_for('home.index', pn=recipes.prev_num) }}">Previous</a></li>
-              {% endif %}
-              {% for nm in recipes_srchd.iter_pages() %}
-                {% if nm %}
-                  <li class="page-item"><a class="page-link" href="{{ url_for('home.index', pn=nm) }}">{{ nm }}</a></li>
-                {% else %}
-                  <li class="page-item"><a class="page-link" href="#">...</a>
-                {% endif %}
-              {% endfor %}
-              {% if recipes_srchd.has_next %}
-                <li class="page-item"><a class="page-link" href="{{ url_for('home.index', pn=recipes.next_num) }}">Next</a></li>
-              {% endif %}
-            </ul>
-          </nav>  
+          
         {% endif %}
         
+  </section>
+  <section id="categories">
+    <div class="container">
+      <div class="centered">
+        <nav aria-label="Page navigation">
+          <ul class="pagination">
+            {% if recipes_srchd.has_prev %}
+              <li class="page-item"><a class="page-link" href="{{ url_for('search.index', query=query, pn=recipes_srchd.prev_num) }}">Previous</a></li>
+            {% endif %}
+            {% for nm in recipes_srchd.iter_pages() %}
+              {% if nm %}
+                <li class="page-item"><a class="page-link" href="{{ url_for('search.index', query=query, pn=nm) }}">{{ nm }}</a></li>
+              {% else %}
+                <li class="page-item"><a class="page-link" href="#">...</a>
+              {% endif %}
+            {% endfor %}
+            {% if recipes_srchd.has_next %}
+              <li class="page-item"><a class="page-link" href="{{ url_for('search.index', query=query, pn=recipes_srchd.next_num) }}">Next</a></li>
+            {% endif %}
+          </ul>
+        </nav>
+      </div>
+    </div>
   </section>
 {% endblock %}
