--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -76,7 +76,7 @@
             Made with
             <i class="fa fa-heart" aria-hidden="true"></i>
             by
-            <a href="https://github.com/Anarbb/OsRecipes" target="_blank">Anas 
+            <a href="https://github.com/Anarbb/LibreRecipes" target="_blank">Anas 
             Arbaoui</a> and
             <a href="https://github.com/jraleman/recipe-book-html-template" target="_blank">Jose Ramon</a>.
           </div>
