--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -39,7 +39,23 @@
 
   <!-- Website Logo
   ================= -->
+
   <section id="logo">
+    <nav class="navbar navbar-expand-lg navbar-dark text-center wow pulse">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('categories.index') }}">Categories</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Donate</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <div class="container text-center wow pulse">
       <a href="{{ url_for('home.index') }}">
         <img src="{{ url_for('static', filename='images/logo-white.svg') }}" alt="logo" />
