fixed empty search

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -61,7 +61,7 @@
         <img src="{{ url_for('static', filename='images/logo-white.svg') }}" alt="logo" />
       </a>
       <br />
-      <h1>LibreRecipes</h1>
+      <h1><a href="{{ url_for('home.index') }}" style="color: white;">LibreRecipes</a></h1>
     </div>
   </section>
   
