--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -10,7 +10,7 @@
       <form action="{{ url_for('search.srch_handle') }}" method="POST">
         <div class="input-group rounded">
           <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
-            aria-describedby="search-addon" id="search" name="search"/>
+            aria-describedby="search-addon" id="search" name="search" required/>
           <span class="input-group-text border-0" id="search-addon">
             <button type="submit" class="btn btn-outline-dark"><i class="fa fa-search"></i></button>
           </span>
