--- a/project/templates/categories.html
+++ b/project/templates/categories.html
@@ -13,19 +13,17 @@
       </div>
       
     <div class="row">
-        
-        <div class="row wow slideInUp">
-            <div class="col-12">
-              <div class="recipe-directions">
-                <ol>
-                    {% for category in categories %}
-                        <span class="badge badge-dark"><a style="color: white;" href="{{ url_for('categories.category', cat=category.categories) }}">{{ category.categories}}</a></span>
-                    {% endfor %}
-                </ol>
-              </div>
-            </div>
-          </div> 
-        
+      <div class="row wow slideInUp">
+        <div class="col-12">
+          <div class="recipe-directions">
+            <ol>
+                {% for category in categories %}
+                    <a class="badge badge-dark" style="color: white;" href="{{ url_for('categories.category', cat=category.categories) }}">{{ category.categories}}</a>
+                {% endfor %}
+            </ol>
+          </div>
+        </div>
+      </div> 
     </div>
 </section>
 {% endblock%}
