--- a/project/static/css/styles.css
+++ b/project/static/css/styles.css
@@ -3,11 +3,11 @@
 ** -----------------------------------------------------------------------------
 */
 
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
-@import url('https://fonts.googleapis.com/css?family=Dancing+Script');
+@import url("https://fonts.googleapis.com/css?family=Montserrat");
+@import url("https://fonts.googleapis.com/css?family=Dancing+Script");
 @font-face {
-   font-family: 'Quirlycues';
-   src: url(../fonts/Quirlycues.ttf);
+  font-family: "Quirlycues";
+  src: url(../fonts/Quirlycues.ttf);
 }
 
 /*
@@ -19,22 +19,24 @@ body {
   background-color: black;
   color: #666;
   font-size: 16px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 400;
-  line-height: 1.50;
+  line-height: 1.5;
   overflow-x: hidden;
 }
-ol, ul {
+ol,
+ul {
   list-style: none;
 }
-blockquote, q {
+blockquote,
+q {
   quotes: none;
 }
 blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: '';
+  content: "";
   content: none;
 }
 table {
@@ -46,6 +48,9 @@ table {
   align-items: center;
 }
 
+.pagination {
+  justify-content: center;
+}
 /*
 ** Splash Screen
 ** -----------------------------------------------------------------------------
@@ -74,9 +79,7 @@ table {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-image:
-    radial-gradient(rgba(7, 0, 7, 0.15),
-    rgba(15, 14, 15, 0.75)),
+  background-image: radial-gradient(rgba(7, 0, 7, 0.15), rgba(15, 14, 15, 0.75)),
     url("../images/kitchen-banner.jpg");
 }
 #logo img {
@@ -85,7 +88,7 @@ table {
   margin-top: 24px;
 }
 #logo h1 {
-  font-family: 'Quirlycues';
+  font-family: "Quirlycues";
   font-size: 72px;
   font-weight: normal;
   padding-top: 24px;
@@ -104,7 +107,7 @@ table {
 }
 #categories h2 {
   color: #333;
-  font-family: 'Dancing Script', cursive;
+  font-family: "Dancing Script", cursive;
   font-size: 2em;
   margin-bottom: 12px;
 }
@@ -138,7 +141,7 @@ table {
 }
 #items h2 {
   color: #333;
-  font-family: 'Dancing Script', cursive;
+  font-family: "Dancing Script", cursive;
   font-size: 2em;
   margin-bottom: 12px;
 }
@@ -150,9 +153,9 @@ table {
   margin-bottom: 24px;
   padding-bottom: 12px;
   background-color: #fff;
-  -webkit-box-shadow: 0 1px 0 rgba(0,0,0,.15);
-  -moz-box-shadow: 0 1px 0 rgba(0,0,0,.15);
-  box-shadow: 0 1px 0 rgba(0,0,0,.15);
+  -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
 }
 .recipe-item img {
   width: 100%;
@@ -171,7 +174,7 @@ table {
 }
 #recipe h2 {
   color: #333;
-  font-family: 'Dancing Script', cursive;
+  font-family: "Dancing Script", cursive;
   font-size: 2em;
   margin-bottom: 24px;
   margin-top: 12px;
@@ -185,30 +188,21 @@ table {
   height: auto;
   margin-bottom: 24px;
   margin-top: 6px;
-  -webkit-box-shadow:
-    0px 0px 0px 2px rgba(0,0,0,0.6),
-    0px 0px 0px 14px #fff,
-    0px 0px 0px 18px rgba(0,0,0,0.2),
-    6px 6px 8px 17px #555;
-  -moz-box-shadow:
-    0px 0px 0px 2px rgba(0,0,0,0.6),
-    0px 0px 0px 14px #fff,
-    0px 0px 0px 18px rgba(0,0,0,0.2),
-    6px 6px 8px 17px #555;
-  box-shadow:
-    0px 0px 0px 2px rgba(0,0,0,0.6),
-    0px 0px 0px 14px #fff,
-    0px 0px 0px 18px rgba(0,0,0,0.2),
-    6px 6px 8px 17px #555;
+  -webkit-box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 0.6), 0px 0px 0px 14px #fff,
+    0px 0px 0px 18px rgba(0, 0, 0, 0.2), 6px 6px 8px 17px #555;
+  -moz-box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 0.6), 0px 0px 0px 14px #fff,
+    0px 0px 0px 18px rgba(0, 0, 0, 0.2), 6px 6px 8px 17px #555;
+  box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 0.6), 0px 0px 0px 14px #fff,
+    0px 0px 0px 18px rgba(0, 0, 0, 0.2), 6px 6px 8px 17px #555;
 }
 .recipe-info .row {
   margin-top: 12px;
   padding-top: 6px;
   padding-bottom: 6px;
   background-color: #f9f9f9;
-  -webkit-box-shadow: 0 1px 0 rgba(0,0,0,.15);
-  -moz-box-shadow: 0 1px 0 rgba(0,0,0,.15);
-  box-shadow: 0 1px 0 rgba(0,0,0,.15);
+  -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
 }
 .recipe-info i {
   color: black;
@@ -232,9 +226,9 @@ table {
   font-size: 13px;
   line-height: 37px;
   background: #f9f9f9;
-  -webkit-box-shadow: 0 1px 0 rgba(0,0,0,.15);
-  -moz-box-shadow: 0 1px 0 rgba(0,0,0,.15);
-  box-shadow: 0 1px 0 rgba(0,0,0,.15);
+  -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
 }
 .ingredients-list dd {
   width: 85%;
@@ -246,64 +240,64 @@ table {
   font-weight: 600;
   background: black;
   color: #f9f9f9;
-  -webkit-box-shadow: 0 1px 0 rgba(0,0,0,.15);
-  -moz-box-shadow: 0 1px 0 rgba(0,0,0,.15);
-  box-shadow: 0 1px 0 rgba(0,0,0,.15);
+  -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
 }
 .recipe-directions ol {
-    counter-reset: li;
-    list-style: none;
-    padding: 0;
-    margin-bottom: 4em;
-    text-shadow: 0 1px 0 rgba(255,255,255,.5);
+  counter-reset: li;
+  list-style: none;
+  padding: 0;
+  margin-bottom: 4em;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
 }
 .recipe-directions ol ol {
-    margin: 0 0 0 2em;
+  margin: 0 0 0 2em;
 }
 .recipe-directions li {
-    position: relative;
-    display: block;
-    padding: .4em .4em .4em .8em;
-    *padding: .4em;
-    margin: .5em 0 .5em 2.5em;
-    background: #f9f9f9;
-    color: #222;
-    text-decoration: none;
-    transition: all .3s ease-out;
-    -webkit-box-shadow: 0 1px 0 rgba(0,0,0,.15);
-    -moz-box-shadow: 0 1px 0 rgba(0,0,0,.15);
-    box-shadow: 0 1px 0 rgba(0,0,0,.15);
+  position: relative;
+  display: block;
+  padding: 0.4em 0.4em 0.4em 0.8em;
+  *padding: 0.4em;
+  margin: 0.5em 0 0.5em 2.5em;
+  background: #f9f9f9;
+  color: #222;
+  text-decoration: none;
+  transition: all 0.3s ease-out;
+  -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
 }
-.recipe-directions li:hover{
-    background: #f1f1f1;
+.recipe-directions li:hover {
+  background: #f1f1f1;
 }
-.recipe-directions li:before{
-    content: counter(li);
-    counter-increment: li;
-    position: absolute;
-    left: -2.5em;
-    top: 50%;
-    margin-top: -1em;
-    background: black;
-    height: 2em;
-    width: 2em;
-    line-height: 2em;
-    text-align: center;
-    font-weight: bold;
-    color: #f9f9f9;
+.recipe-directions li:before {
+  content: counter(li);
+  counter-increment: li;
+  position: absolute;
+  left: -2.5em;
+  top: 50%;
+  margin-top: -1em;
+  background: black;
+  height: 2em;
+  width: 2em;
+  line-height: 2em;
+  text-align: center;
+  font-weight: bold;
+  color: #f9f9f9;
 }
-.recipe-directions li:after{
-    position: absolute;
-    content: '';
-    border: .5em solid transparent;
-    left: -1em;
-    top: 50%;
-    margin-top: -.5em;
-    transition: all .3s ease-out;
+.recipe-directions li:after {
+  position: absolute;
+  content: "";
+  border: 0.5em solid transparent;
+  left: -1em;
+  top: 50%;
+  margin-top: -0.5em;
+  transition: all 0.3s ease-out;
 }
-.recipe-directions li:hover:after{
-    left: -.5em;
-    border-left-color: black;
+.recipe-directions li:hover:after {
+  left: -0.5em;
+  border-left-color: black;
 }
 
 /*
@@ -327,7 +321,7 @@ footer {
   top: 50%;
   left: 50%;
   margin-right: -50%;
-  transform: translate(-50%, -50%)
+  transform: translate(-50%, -50%);
 }
 .footer-author a {
   color: #f9f9f9;
