--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -54,23 +54,22 @@
   </section>
 <section id="categories">
   <div class="container">
-    <nav aria-label="Page navigation">
-      <ul class="pagination">
-        {% if recipes.has_prev %}
-          <li class="page-item"><a class="page-link" href="{{ url_for('home.index', pn=recipes.prev_num) }}">Previous</a></li>
-        {% endif %}
-        {% for nm in recipes.iter_pages() %}
-          {% if nm %}
-            <li class="page-item"><a class="page-link" href="{{ url_for('home.index', pn=nm) }}">{{ nm }}</a></li>
-          {% else %}
-            <li class="page-item"><a class="page-link" href="#">...</a>
+      <nav aria-label="Page navigation">
+        <ul class="pagination pagination-sm flex-wrap">
+          {% if recipes.has_prev %}
+            <li class="page-item"><a class="page-link" href="{{ url_for('home.index', pn=recipes.prev_num) }}">Previous</a></li>
           {% endif %}
-        {% endfor %}
-        {% if recipes.has_next %}
-          <li class="page-item"><a class="page-link" href="{{ url_for('home.index', pn=recipes.next_num) }}">Next</a></li>
-        {% endif %}
-      </ul>
-    </nav>
+          {% for nm in recipes.iter_pages() %}
+            {% if nm %}
+              <li class="page-item"><a class="page-link" href="{{ url_for('home.index', pn=nm) }}">{{ nm }}</a></li>
+            {% else %}
+              <li class="page-item"><a class="page-link" href="#">...</a>
+            {% endif %}
+          {% endfor %}
+          {% if recipes.has_next %}
+            <li class="page-item"><a class="page-link" href="{{ url_for('home.index', pn=recipes.next_num) }}">Next</a></li>
+          {% endif %}
+      </nav>
   </div>
 </section>
 {% endif %}
